--- a/otf-configuration.yml
+++ b/otf-configuration.yml
@@ -1,6 +1,8 @@
 spring:
   datasource:
-    url:jdbc:postgresql://orgwisely.postgres.database.azure.com:5432/postgres?user=postgress@orgwisely&password=C34wKWb9f$tDhE9&sslmode=require
+    username: postgress
+    url: jdbc:postgresql://orgwisely.postgres.database.azure.com:5432/postgres?sslmode=require 
+    password: C34wKWb9f$tDhE9
     hikari:
       minimumIdle: 5
       idleTimeout: 11000
@@ -23,3 +25,4 @@ springdoc:
   api-docs:
     path: /api-docs
   use-fqn: 'true'  
+
