--- a/otf-configuration.yml
+++ b/otf-configuration.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     username: postgress
-    url: jdbc:postgresql://orgwisely.postgres.database.azure.com:5432/postgres?sslmode=require 
+    url: jdbc:postgresql://orgwisely.postgres.database.azure.com:5432/postgress?sslmode=require 
     password: C34wKWb9f$tDhE9
   jpa:
     show-sql: false
